--- a/provider-config.yml
+++ b/provider-config.yml
@@ -3,7 +3,7 @@ spring:
     active: 
     - dev  #当前使用环境
 ---
-content: dev content
+content: dev content 123
 spring: 
   profiles: dev # 测试环境
   application: 
